# astatine

./: .gitmodules  .licensure.yml  Cargo.toml  LICENSE
macros/: Cargo.toml
macros/src/: lib.rs
src/: class_reader.rs  class_structures.rs  constants.rs  conversions.rs  main.rs  primitive_constants.rs
src/attributes/: attributes.rs  code.rs  exceptions.rs  mod.rs  stack_map_frames.rs  stack_map_table.rs
src/class_file/: annotations.rs  attribute_tags.rs  attributes.rs  class_loader.rs  class_reader.rs  class_structures.rs  code.rs  exceptions.rs  field.rs  fields.rs  method.rs  methods.rs  mod.rs  module.rs  record.rs  stack_map_frames.rs  stack_map_table.rs  utils.rs  verification.rs  version.rs  vm_constants.rs
src/code/: interpreter.rs  mod.rs  primitive_ops.rs  stack_frame.rs
src/code/interpreter/: constants.rs  instructions.rs  primitive_ops.rs
src/objects/: handles.rs  heap.rs  mod.rs  object.rs  reference.rs
src/types/: access_flags.rs  class.rs  code.rs  constant_pool.rs  field.rs  method.rs  mod.rs  module.rs  record.rs  utils.rs
src/utils/: buffer.rs  buffer_extras.rs  constants.rs  descriptors.rs  extras.rs  lateinit.rs  mod.rs  vm_types.rs
