[package]
name = "astatine"
version = "0.1.0"
authors = ["Callum Seabrook <callum.seabrook@prevarinite.com>"]
edition = "2021"
rust-version = "1.56.0"
description = "A simple, barely functional Java virtual machine designed for educational purposes"
repository = "https://github.com/BomBardyGamer/astatine"
license-file = "LICENSE"
keywords = ["jvm", "java", "java virtual machine"]
categories = ["compilers"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
bytes = "1.1.0"
jni = "0.19.0"
paste = "1.0.6"
internship = "0.6.0"
enum-as-inner = "0.3.3"
nom = "5.1.2"
